# records-old

./: LICENSE  README.md  docker-compose.yml  logging.conf  pyproject.toml  seed.sql
extras/: seed.py
records/: __init__.py  __main__.py  app.py  controller.py  db.py  endpoint.py  errors.py  exceptions.py  model.py  protocol.py  service.py  utils.py
records/api/: __init__.py  albums.py
records/api/schemas/: __init__.py  album.py
records/controllers/: __init__.py  album.py  track.py
records/controllers/rest/: __init__.py  album.py  track.py
records/controllers/rest/schemas/: __init__.py  track.py
records/controllers/schemas/: album.py  artist.py  track.py
records/database/: __init__.py  manager.py  service.py
records/database/tables/: __init__.py  album.py  artist.py  track.py
records/endpoints/: __init__.py  album.py
records/models/: __init__.py  album.py  artist.py  track.py
records/models/schemas/: __init__.py  album.py  artist.py  track.py
records/schemas/: __init__.py  artist.py  track.py
records/services/: __init__.py  album.py  base.py  track.py
